2013-12-30  Per Bothner  <per@bothner.com>

	* system-test.scm: Some tests of reading or writing from/to ports.
	Needed to add a sleep now that this is done using a thread.

2013-12-29  Per Bothner  <per@bothner.com>

	* inlining.expected: Update after better code-egenation for 'eq?'.

2013-12-26  Per Bothner  <per@bothner.com>

	* system-test.scm:  Add tests for redirection to output port.

2013-12-25  Per Bothner  <per@bothner.com>

	* system-test.scm: More tests, some re-factoring.

2013-12-22  Per Bothner  <per@bothner.com>

	* system-test.scm: Test process-related and system-related
	functionality.
	* Makefile.am: Update accordingly.

2013-12-13  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Enable tests for exception-handling.
	Add new tests for exception-handling.
	(guard): Remove ad-hoc definition.

2013-12-08   John Tobey <jtobey@john-edwin-tobey.org>
	     Per Bothner  <per@bothner.com>

	* module3.scm, obj-test.scm: Testcase for Savannah bug #40822
	"Exporting macro-defined macro:	Internal error".

2013-12-05  John Tobey <jtobey@john-edwin-tobey.org>

	* sva40729.scm: Test for Savannah bug #40814
	"R6RS/R7RS ellipsis escapes".
	* Makefile.am: Update accordingly.

2013-12-02  Per Bothner  <per@bothner.com>

	* inlining.expected: Update - StackTarget#forceLazyIfNeeded now
	emits call to 2-argument Promise#force.

	* inlining.expected: Update - we avoid some needless calls
	to Promise.force.

2013-12-01  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Add a skeletal definition of guard so we can use
	it for varrious tests.
	Import some tests from upstream.

2013-12-01  Jussi Piitulainen <jpiitula@ling.helsinki.fi>
	    John Cowan <cowan@mercury.ccil.org>
            Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Add a test for letrec*.
	Enable existing letrec* test.

2013-11-30  John Tobey <jtobey@john-edwin-tobey.org>

	* sva40729.scm: New test for Savannah bug #40729 "NPE in
	inline-compiler for AppendValues".